# rangetools

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: bound.rs  bounded_range.rs  bounded_set.rs  complement.rs  empty_range.rs  intersection.rs  lib.rs  lower_bounded_range.rs  lower_bounded_set.rs  step.rs  unbounded_range.rs  unbounded_set.rs  union.rs  upper_bounded_range.rs  upper_bounded_set.rs
src/implementations/: mod.rs
src/implementations/complement/: bounded_range.rs  bounded_set.rs  empty_range.rs  lower_bounded_range.rs  lower_bounded_set.rs  range.rs  range_from.rs  range_full.rs  range_inclusive.rs  range_to.rs  range_to_inclusive.rs  unbounded_range.rs  unbounded_set.rs  upper_bounded_range.rs  upper_bounded_set.rs
src/implementations/index/: bounded_range.rs  empty_range.rs  lower_bounded_range.rs  unbounded_range.rs  upper_bounded_range.rs
src/implementations/intersection/: bounded_range.rs  bounded_set.rs  empty_range.rs  lower_bounded_range.rs  lower_bounded_set.rs  range.rs  range_from.rs  range_full.rs  range_inclusive.rs  range_to.rs  range_to_inclusive.rs  unbounded_range.rs  unbounded_set.rs  upper_bounded_range.rs  upper_bounded_set.rs
src/implementations/rangetools/: bounded_range.rs  bounded_set.rs  empty_range.rs  lower_bounded_range.rs  lower_bounded_set.rs  range.rs  range_from.rs  range_full.rs  range_inclusive.rs  range_to.rs  range_to_inclusive.rs  unbounded_range.rs  unbounded_set.rs  upper_bounded_range.rs  upper_bounded_set.rs
src/implementations/union/: bounded_set.rs  (+14 more)
src/test/: complement.rs  conversions.rs  mod.rs
(+44 files in other folders)
