[package]
authors = ["rory <rjsnively@gmail.com>"]
description = "Extending the Rust Range structs found in std::ops"
documentation = "https://docs.rs/rangetools"
edition = "2021"
homepage = "https://github.com/rsnively/rangetools"
keywords = ["range", "set", "intersection", "union"]
license = "MIT OR Apache-2.0"
name = "rangetools"
readme = "README.md"
repository = "https://github.com/rsnively/rangetools"
version = "0.1.3"

[dependencies]
serde = { version = "1.0.158", features = ["derive"], optional = true }